--- a/app/components/assets/css/modal.module.css
+++ b/app/components/assets/css/modal.module.css
@@ -3,13 +3,18 @@
     width: 100%;
     height: 100%;
     position: fixed;
-    z-index: 9999999;
     top: 0;
     left: 0;
     color: white;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 9;
+}
+.centered_message{
+    text-align: center;
+    display: block;
+    margin: auto;
 }
 .modalBox .modalBody{
     width: 50%;
