--- a/app/components/assets/css/modal.module.css
+++ b/app/components/assets/css/modal.module.css
@@ -106,6 +106,7 @@
 
 .formInputBox textarea {
   width: 95%;
+  height: 160px;
   outline: none;
   border: none;
   border-radius: 10px;
@@ -126,6 +127,8 @@
 .modalBox .modalBody .modalContent .modalFormBox form button:hover {
   background-image: linear-gradient(90deg, #0929c2, #2095fb);
 }
+
+
 
 @media screen and (max-width: 992px) {
   .modalBox .modalBody {
