--- a/app/globals.css
+++ b/app/globals.css
@@ -43,7 +43,19 @@ body {
     -moz-osx-font-smoothing: grayscale;
   background: whitesmoke;
 }
+/* For Webkit Browsers (e.g., Chrome, Safari) */
+select::-webkit-scrollbar {
+  width: 8px; /* Set width of the scrollbar */
+}
 
+select::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0); /* Transparent scrollbar thumb */
+  border-radius: 10px; /* Optional: Round the corners */
+}
+
+select::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* Background of the scrollbar track */
+}
 
 
 * {
