--- a/app/components/assets/css/modal.module.css
+++ b/app/components/assets/css/modal.module.css
@@ -111,6 +111,7 @@
   border: none;
   border-radius: 10px;
   background-color: white;
+  color: black;
 }
 .modalBox .modalBody .modalContent .modalFormBox form button {
   border: none;
