--- a/app/components/assets/css/Footer.module.css
+++ b/app/components/assets/css/Footer.module.css
@@ -17,15 +17,18 @@
   box-shadow: -3px 6px 29px #8080803b;
   width: 95%;
 }
-.subscribeBox h2{
+
+.subscribeBox h2 {
   font-size: 30px;
   font-weight: 500;
 }
-.newsLatterBox{
+
+.newsLatterBox {
   display: flex;
   justify-content: end;
 }
-.newsLatterBox input{
+
+.newsLatterBox input {
   padding: 0.5rem;
   border: none;
   width: 400px;
@@ -43,6 +46,7 @@
   color: white;
   letter-spacing: 1px;
 }
+
 .newsLatterBox button {
   background-image: linear-gradient(90deg, #0929c2, #2095fb);
   border: none;
@@ -56,30 +60,37 @@
   text-align: center !important;
   width: 158px;
 }
+
 .newsLatterBox button svg {
   transform: rotate(-45deg);
   transition: all 0.1s;
 }
+
 .newsLatterBox button:hover {
   background-image: linear-gradient(90deg, #2095fb, #0929c2);
 }
+
 .newsLatterBox button:hover svg {
   transform: rotate(0deg);
   transition: all 0.1s;
 }
-.newsLatterBox button svg{
+
+.newsLatterBox button svg {
   font-size: 20px;
 }
-.LogoBox img{
+
+.LogoBox img {
   width: 70%;
   height: 70px;
   object-fit: contain;
 }
-.LogoBox .socailMediaIconsBox{
+
+.LogoBox .socailMediaIconsBox {
   margin: 30px 0;
   position: relative;
   /* z-index: 999999; */
 }
+
 .LogoBox .socailMediaIconsBox a {
   margin-left: 10px;
   background: #80808087;
@@ -88,59 +99,72 @@
   display: inline-block;
   box-shadow: 0px 0px 2px 2px #8080802b;
 }
+
 .LogoBox .socailMediaIconsBox a:hover {
   transition: all 1s;
   background: white;
 }
+
 .LogoBox .socailMediaIconsBox a:hover svg {
   color: #2095fb;
 }
+
 .LogoBox .socailMediaIconsBox a svg {
   color: white;
   font-size: 20px;
 }
-.linksBox h4{
+
+.linksBox h4 {
   font-size: 20px;
   font-weight: 600;
 }
-.linksBox ul{
+
+.linksBox ul {
   list-style: none;
   padding: 0;
 }
-.linksBox ul p{
+
+.linksBox ul p {
   font-size: 14px;
 }
-.linksBox ul li a{
+
+.linksBox ul li a {
   text-decoration: none;
   color: black;
   font-size: 14px;
   font-weight: 400;
 }
+
 .linksBox ul li a:hover {
   border-bottom: 1px solid #1f96fd;
   transition: all 1s;
   color: #1f96fd !important;
 }
-#BottomRow{
+
+#BottomRow {
   margin-top: 20px;
   border-top: 1px solid #80808042;
   padding-top: 15px;
 }
 
-@media screen and (max-width:992px){
-  .subscribeBox h2{
+@media screen and (max-width:992px) {
+  .subscribeBox h2 {
     text-align: center !important;
   }
-  .subscribeBox p{
+
+  .subscribeBox p {
     text-align: center !important;
   }
-  .newsLatterBox{
+
+  .newsLatterBox {
     justify-content: center;
   }
-  .newsLatterBox input{
+
+  .newsLatterBox input {
     border-radius: 0;
     right: 0;
   }
+
   .newsLatterBox button {
     width: auto;
     border-radius: 0;
@@ -148,38 +172,51 @@
   }
 }
 
-@media screen and (max-width:567px){
+@media screen and (max-width:567px) {
   .footer {
     border-radius: 0;
     width: 100%;
   }
-  .newsLatterBox button svg{
+
+  .newsLatterBox button svg {
     display: none;
   }
-  .newsLatterBox input{
+
+  .newsLatterBox input {
     width: auto;
   }
 }
-@media screen and (max-width:480px){
+
+@media screen and (max-width:480px) {
+  .LogoBox img {
+    display: block;
+    margin: auto;
+  }
+
   .footer {
     border-radius: 0;
     width: 100%;
   }
-  .subscribeBox h2{
+
+  .subscribeBox h2 {
     font-size: 20px;
   }
-  .newsLatterBox{
+
+  .newsLatterBox {
     flex-direction: column;
   }
-  .newsLatterBox button svg{
+
+  .newsLatterBox button svg {
     display: none;
   }
-  .newsLatterBox button{
+
+  .newsLatterBox button {
     width: fit-content;
     padding: 12px 30px;
     margin: 10px auto;
   }
 }
+
 /* .footer {
   background: #FDFEFF;
   color: black;
